--- a/bioinfII/main.tex
+++ b/bioinfII/main.tex
@@ -87,10 +87,10 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{begin.tex}
+% \input{begin.tex}
 \input{tree.tex}
-\input{sankoff.tex}
-\input{locarna.tex}
+% \input{sankoff.tex}
+% \input{locarna.tex}
 % \input{sources.tex}
 
 
