--- a/bioinfII/sankoff.tex
+++ b/bioinfII/sankoff.tex
@@ -5,8 +5,8 @@
     \Large
     \begin{itemize}[<+(1)->]
     \item Dynamic Programming
-    \item Runtime $O(n^6)$
-    \item Space needed: $O(n^4)$
+    \item {\bf Space} needed: $O(n^4)$
+    \item {\bf Runtime} $O(n^6)$
     \end{itemize}
     \pause
     What does it do ... ?
@@ -14,17 +14,24 @@
 
 
 \begin{frame}[c]{Sankoff-Algorithm}
-    Global free energy minimisation.
+    \Large
+    Global free energy minimisation. \\
+    \pause
+    Considering every possible combination.
 \end{frame}
 
+% 
+% \begin{frame}[c]{Sankoff-Algorithm}
+%     \Large
+%     \begin{itemize}[<+(1)->]
+%     \item Base match
+%     \item Base insertion
+%     \item Base deletion
+%     \item Base \textbf{pair} match
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}[c]{Sankoff-Algorithm}
-    \begin{itemize}[<+(1)->]
-    \item Base match
-    \item Base insertion
-    \item Base deletion
-    \item Base \textbf{pair} match
-    \end{itemize}
-\end{frame}
+
+
 
 
