--- a/bioinfII/begin.tex
+++ b/bioinfII/begin.tex
@@ -1,6 +1,10 @@
 \section{Recap}
 
+\begin{frame}[c]{}
+    \center
+    \includegraphics[width=\textwidth]{RNAss}
 
+\end{frame}
 
 \begin{frame}[c]{}
     \center
