--- a/bioinfII/main.tex
+++ b/bioinfII/main.tex
@@ -27,9 +27,9 @@
 {
     \large
     \begin{frame}{Content}
-        \begin{multicols}{2}
+%         \begin{multicols}{2}
             \tableofcontents[currentsection]
-        \end{multicols}
+%         \end{multicols}
         \clearpage
     \end{frame}
 }
@@ -38,9 +38,9 @@
 {
     \large
     \begin{frame}{Content}
-        \begin{multicols}{2}
+%         \begin{multicols}{2}
             \tableofcontents[currentsection,currentsubsection]
-        \end{multicols}
+%         \end{multicols}
         \clearpage
     \end{frame}
 }
@@ -71,16 +71,16 @@
 
 \begin{frame}{Content}
     \large
-    \begin{multicols}{2}
+%     \begin{multicols}{2}
 %        \tableofcontents[hidesubsections]
         \tableofcontents[]
-    \end{multicols}
+%     \end{multicols}
     % \clearpage
 \end{frame}
 
 
 % Topics:
-% 
+%
 % Recap: Sequence Similarity / Identity (short: needleman)
 % Somewhat: Tree-based alignment
 % In-Depth: Sankoff Algorithm (LocARNA)
@@ -88,9 +88,9 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \input{begin.tex}
-\input{tree.tex}
+% \input{tree.tex}
 % \input{sankoff.tex}
-% \input{locarna.tex}
+\input{locarna.tex}
 % \input{sources.tex}
 
 
