--- a/bioinfII/sankoff.tex
+++ b/bioinfII/sankoff.tex
@@ -18,9 +18,11 @@
     Global free energy minimisation. \\
     \pause
     Considering every possible combination.
+%     \includegraphics[width=\textwidth]{rna_illustration}
 \end{frame}
 
-% 
+
+%
 % \begin{frame}[c]{Sankoff-Algorithm}
 %     \Large
 %     \begin{itemize}[<+(1)->]
