finished presentation and summary

--- a/bioinfII/locarna.tex
+++ b/bioinfII/locarna.tex
@@ -61,14 +61,28 @@
 \end{frame}
 
 
-\begin{frame}[c]{LocARNA - Example}
+\begin{frame}[c]{LocARNA - Demonstration}
     \center
     \includegraphics[width=0.5\textwidth]{Arcs_example}
 \end{frame}
 
 
+\begin{frame}[standout]
+    Demo Time!
+\end{frame}
+
+\begin{frame}[c]{LocARNA - Final actual Alignment}
+    \center
+    \begin{overprint}
+        \only<2>{\includegraphics[width=0.73\textwidth]{Needleman-Wunsch_pairwise_sequence_alignment}}
+        \only<1>{\includegraphics[width=\textwidth]{locarna_formula}}
+    \end{overprint}
+\end{frame}
+
+
 % lingering questions:
-% - if there's arcs a10 and a14, will there be two different places for them in D? in M?
+% - if there's arcs a10 and a14 being locally different but the same, will
+%   there be two different places for them in D? in M?
 % -
 
 
