--- a/bioinfII/sources.tex
+++ b/bioinfII/sources.tex
@@ -25,6 +25,10 @@
             {\bf RNA-Bioinformatics Lecture}
             \newblock \url{https://ilias.uni-freiburg.de/ilias.php?ref_id=1009368&obj\_id=1&cmd=layout&cmdClass=illmpresentationgui&cmdNode=fu&baseClass=ilLMPresentationGUI}
 
+    \bibitem{RNA-Compparison Lecture MIT}
+            {\bf RNA-Comparison Lecture MIT}
+            \newblock \url{https://math.mit.edu/classes/18.417/Slides/RNA-comparisonIV.pdf}
+
 
 %     \beamertemplatebookbibitems
 %     \bibitem{Richard Rumelt}
