--- a/bioinfII/tree.tex
+++ b/bioinfII/tree.tex
@@ -34,7 +34,10 @@
     Example: \texttt{(.[.).]}
 \end{frame}
 
-
+\begin{frame}[standout]
+    \center
+    \includegraphics[width=\textwidth]{secondary_structures}
+\end{frame}
 
 \begin{frame}[c]{Tree-Editing}
     \Large
