--- a/bioinfI/main.tex
+++ b/bioinfI/main.tex
@@ -13,8 +13,8 @@
 
 \date{\today}
 \institute{University of Freiburg}
-\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
-\graphicspath{ {./template/} {./proseminar/} {./proseminar/images/} }
+\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
+\graphicspath{ {../template/} {./images/} }
 
 \title{A Simple Protocol for the Inference of RNA Global Pairwise Alignments}
 \author{Felix Karg}
